# Kimera-VIO

./: CMakeLists.txt
docs/: gnss_integration.md  kimera_vio_gnss_integration.md
examples/: GnssStereoVIO.cpp  KimeraVIO.cpp
odometer/: CMakeLists.txt  GnssStereoVIO.cpp
odometr/: CMakeLists.txt
params/Euroc/: BackendParams.yaml  GnssParams.yaml  ImuParams.yaml  PipelineParams.yaml
scripts/: gnssVIOEuroc.bash
scripts/docker/: Dockerfile  kimera_vio_docker.bash
scripts/gnss/: Dockerfile  kimera_vio_docker.bash
src/backend/: CMakeLists.txt  GnssVioBackend.cpp  GnssVioBackendParams.cpp  RegularVioBackend.cpp  VioBackend.cpp
src/dataprovider/: DataProviderInterface.cpp  DataProviderModule.cpp  EurocDataProvider.cpp  GNSSVIODataProvider.cpp  GnssStereoDataProviderModule.cpp  MonoDataProviderModule.cpp  StereoDataProviderModule.cpp
src/factors/: CMakeLists.txt  GnssFactor.cpp
src/frontend/: CMakeLists.txt  GnssParams.cpp  GnssStereoImuSyncPacket.cpp  GnssStereoVisionImuFrontend.cpp  GnssVisionImuFrontendModule.cpp  MonoVisionImuFrontend.cpp  RgbdVisionImuFrontend.cpp  StereoVisionImuFrontend.cpp  VisionImuFrontend.cpp  VisionImuFrontendModule.cpp
src/pipeline/: CMakeLists.txt  GnssStereoImuPipeline.cpp  Pipeline-definitions.cpp  Pipeline.cpp  RgbdImuPipeline.cpp
src/utils/: CMakeLists.txt  (+1 more)
tests/: testExternalOdometryFrontend.cpp  testGnssFactor.cpp  testGnssParams.cpp  testGnssStereoImuPipeline.cpp  testGnssStereoProvider.cpp  testRgbdVisionImuFrontend.cpp  testStereoVisionImuFrontend.cpp  testThreadSafeGnssBuffer.cpp  testVioParams.cpp
(+43 files in other folders)
